objects/Partner_Contact_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_Privileges__c</fullName>
        <label>Administrative Privileges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Version__c</fullName>
        <label>Agreement Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Me_For__c</fullName>
        <label>Contact Me For</label>
        <picklist>
            <picklistValues>
                <fullName>Assistance with the partner application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Send Me A Login</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information on the Partner Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need access to the Support Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to talk with my Silver Peak Sales Representative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Contacts Profile</relationshipLabel>
        <relationshipName>Partner_Contacts_Profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Agreed_to_Terms__c</fullName>
        <label>Date Agreed to Terms</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dell_Segment__c</fullName>
        <label>Dell Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Preferred Corporate Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Public Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Institutions – Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Institutions – Education, State, &amp; Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare &amp; Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Commercial Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IM_Name__c</fullName>
        <label>IM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Agreed_to_Terms__c</fullName>
        <label>IP Agreed to Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Certifications_Held__c</fullName>
        <label>Industry Certifications Held</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>CEO/General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Sales Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Technical Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LmsUserId__c</fullName>
        <label>Lms User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LmsUsername__c</fullName>
        <label>Lms Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <label>Member Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_LMS_User_Id__c</fullName>
        <label>Old LMS User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Level__c</fullName>
        <label>Partner Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Locator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Locator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RV_User_Name__c</fullName>
        <label>RV User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <label>Reports To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype_Name__c</fullName>
        <label>Skype Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Contact Profile</label>
    <nameField>
        <label>Partner Contact Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Contacts Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>